[package]
name = "crossos"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
  "desktop",
  "server",
  "shared",
]

[[bin]]
name = "server"
path = "server/src/main.rs"

[[bin]]
name = "desktop"
path = "desktop/src/main.rs"

[dependencies]
bevy = { version= "0.9.1", features = ["dynamic"] }
